Updated with version: 4.35.0 changes

--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -155,10 +155,6 @@
     "message": "يبدو جيد",
     "description": "Confirmation button after user chose what to block on the page"
   },
-  "buttonback": {
-    "message": "رجوع",
-    "description": "Back to previous page button"
-  },
   "findingads": {
     "message": "يبحث عن الإعلانات…\n\nسيأخذ هذا بعض الوقت فحسب.",
     "description": "'Block an ad' wizard loading message"
@@ -1345,10 +1341,6 @@
     "message": "فقط منع الإعلانات في هذه المواقع:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
   },
-  "format_site1_site2_site3": {
-    "message": "تنسيق: ~موقع1.com|~موقع2.com|~اخبار.موقع3.org",
-    "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
-  },
   "warning_overrules_filters": {
     "message": "تحذير: في جميع المواقع الأخرى سوف تشاهد الإعلانات!\nهذا يلغي كافة عوامل التصفية الأخرى لتلك المواقع.",
     "description": "Message on the 'Customize' tab of the options page, explaining the danger of adding a allowlist filter for all websites with only some exceptions."
@@ -2413,10 +2405,6 @@
     "message": "يقوم AdBlock بتحديث قوائم الفلاتر الخاصة بك الآن لمعرفة ما إذا كانت هذه هي المشكلة.",
     "description": "Message for help flow in popup menu."
   },
-  "done_reload_page": {
-    "message": "بمجرد الانتهاء من ذلك، يرجى إعادة تحميل الصفحة.",
-    "description": "Message for help flow in popup menu."
-  },
   "checked_basics": {
     "message": "قمنا بالتحقق من الأساسيات، وقمنا بتحديث قوائم الفلاتر الخاصة بك.",
     "description": "Message for help flow in popup menu."
@@ -3044,5 +3032,9 @@
   "custom_image_supported_file_types": {
     "message": "*.bmp, *.gif, *.jpeg, *.png, *.svg, *.tiff, *.webp",
     "description": "supported file types, shown on the error message dialog box when a user selects a unsupported file type"
+  },
+  "done_reload_page": {
+    "message": "بمجرد الانتهاء من ذلك، يرجى إعادة تحميل الصفحة.",
+    "description": "text on panel in the help flow"
   }
 }
