--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -155,10 +155,6 @@
     "message": "Terlihat bagus",
     "description": "Confirmation button after user chose what to block on the page"
   },
-  "buttonback": {
-    "message": "Kembali",
-    "description": "Back to previous page button"
-  },
   "findingads": {
     "message": "Mencari iklan...\n\nhanya sebentar saja.",
     "description": "'Block an ad' wizard loading message"
@@ -1387,10 +1383,6 @@
     "message": "Hanya blokir iklan di situs-situs ini:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
   },
-  "format_site1_site2_site3": {
-    "message": "Format: ~site1.com|~site2.com|~news.site3.org",
-    "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
-  },
   "warning_overrules_filters": {
     "message": "Peringatan: pada semua situs lain anda akan melihat iklan!\nHal ini mengesampingkan semua filter lain untuk situs-situs tersebut.",
     "description": "Message on the 'Customize' tab of the options page, explaining the danger of adding a allowlist filter for all websites with only some exceptions."
@@ -2611,10 +2603,6 @@
     "message": "AdBlock memperbarui daftar filter anda sekarang untuk melihat apakah itu masalahnya.",
     "description": "Message for help flow in popup menu."
   },
-  "done_reload_page": {
-    "message": "Setelah kami selesai, silakan muat ulang laman.",
-    "description": "Message for help flow in popup menu."
-  },
   "checked_basics": {
     "message": "Kami telah memeriksa dasarnya, dan memperbarui daftar filter anda.",
     "description": "Message for help flow in popup menu."
@@ -3310,5 +3298,9 @@
   "always": {
     "message": "Selalu",
     "description": "The button text on the popup menu"
+  },
+  "done_reload_page": {
+    "message": "Setelah kami selesai, silakan muat ulang laman.",
+    "description": "text on panel in the help flow"
   }
 }
