--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -155,10 +155,6 @@
     "message": "선택",
     "description": "Confirmation button after user chose what to block on the page"
   },
-  "buttonback": {
-    "message": "뒤로",
-    "description": "Back to previous page button"
-  },
   "findingads": {
     "message": "광고를 찾는 중...\n\n잠시만 기다려주세요.",
     "description": "'Block an ad' wizard loading message"
@@ -1291,10 +1287,6 @@
     "message": "해당 도메인에 대한 제한 풀기",
     "description": "Menu entry to let the user cancel the result of running the blocklist wizard."
   },
-  "undo_last_block_site": {
-    "message": "숨겨진 항목 취소하기",
-    "description": "Menu entry to let the user cancel the result of running the blocklist wizard."
-  },
   "dont_run_on_this_page": {
     "message": "현재 페이지 허용",
     "description": "Menu entry to allowlist the current page"
@@ -1382,10 +1374,6 @@
   "only_block_ads_on_these_sites": {
     "message": "이 사이트에서만 광고 차단:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
-  },
-  "format_site1_site2_site3": {
-    "message": "형식 : ~site1.com|~site2.com|~news.site3.org",
-    "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
   },
   "warning_overrules_filters": {
     "message": "주의: 해당 사이트 이외의 광고는 허용됩니다!\n이 설정은 개별 사이트 필터 설정보다 우선됩니다.",
@@ -2489,10 +2477,6 @@
     "message": "AdBlock이 이제 필터 목록을 업데이트할 것입니다.",
     "description": "Message for help flow in popup menu."
   },
-  "done_reload_page": {
-    "message": "완료된 후, 페이지를 새로 고침하세요.",
-    "description": "Message for help flow in popup menu."
-  },
   "checked_basics": {
     "message": "기본적인 것들을 모두 해봤고, 필터 목록까지 업데이트했습니다.",
     "description": "Message for help flow in popup menu."
@@ -2948,5 +2932,9 @@
   "custom_image_supported_file_types": {
     "message": "*.bmp, *.gif, *.jpeg, *.png, *.svg, *.tiff, *.webp",
     "description": "supported file types, shown on the error message dialog box when a user selects a unsupported file type"
+  },
+  "done_reload_page": {
+    "message": "완료된 후, 페이지를 새로 고침하세요.",
+    "description": "text on panel in the help flow"
   }
 }
