--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -155,10 +155,6 @@
     "message": "Nampak bagus",
     "description": "Confirmation button after user chose what to block on the page"
   },
-  "buttonback": {
-    "message": "Kembali",
-    "description": "Back to previous page button"
-  },
   "findingads": {
     "message": "Mencari iklan...\n\nIni hanya akan mengambil sedikit masa.",
     "description": "'Block an ad' wizard loading message"
@@ -1387,10 +1383,6 @@
     "message": "Hanya sekat iklan di laman-laman ini:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
   },
-  "format_site1_site2_site3": {
-    "message": "Format: ~site1.com|~site2.com|~news.site3.org",
-    "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
-  },
   "warning_overrules_filters": {
     "message": "Amaran: pada semua halaman lain, anda akan melihat iklan! \nIni mengatasi semua penapis lain untuk laman tersebut.",
     "description": "Message on the 'Customize' tab of the options page, explaining the danger of adding a allowlist filter for all websites with only some exceptions."
@@ -2575,10 +2567,6 @@
     "message": "AdBlock sedang mengemas kini senarai penapis untuk melihat jika itu adalah masalahnya.",
     "description": "Message for help flow in popup menu."
   },
-  "done_reload_page": {
-    "message": "Setelah kami selesai, sila muat semula halaman.",
-    "description": "Message for help flow in popup menu."
-  },
   "checked_basics": {
     "message": "Kami telah periksa dan mengemas kini senarai penapis anda.",
     "description": "Message for help flow in popup menu."
@@ -3274,5 +3262,13 @@
   "always": {
     "message": "Sentiasa",
     "description": "The button text on the popup menu"
+  },
+  "done_reload_page": {
+    "message": "Setelah kami selesai, sila muat semula halaman.",
+    "description": "text on panel in the help flow"
+  },
+  "fun_way_customize": {
+    "message": "Tema adalah cara yang menyeronokkan untuk menyesuaikan AdBlock di pelayar anda.",
+    "description": "Description of Themes on the main Premium options page"
   }
 }
