--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -155,10 +155,6 @@
     "message": "Wygląda dobrze",
     "description": "Confirmation button after user chose what to block on the page"
   },
-  "buttonback": {
-    "message": "Wróć",
-    "description": "Back to previous page button"
-  },
   "findingads": {
     "message": "Wyszukuję reklamy...\n\nTo potrwa tylko chwilę.",
     "description": "'Block an ad' wizard loading message"
@@ -1387,10 +1383,6 @@
     "message": "Blokuj reklamy tylko na tych stronach:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
   },
-  "format_site1_site2_site3": {
-    "message": "Format: ~site1.com|~site2.com|~news.site3.org",
-    "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
-  },
   "warning_overrules_filters": {
     "message": "Uwaga: na wszystkich innych stronach będziesz widzieć reklamy!\nUnieważnia to wszystkie inne filtry dla tych stron.",
     "description": "Message on the 'Customize' tab of the options page, explaining the danger of adding a allowlist filter for all websites with only some exceptions."
@@ -2579,10 +2571,6 @@
     "message": "AdBlock aktualizuje twoją listę filtrów, aby sprawdzić czy może to być problem.",
     "description": "Message for help flow in popup menu."
   },
-  "done_reload_page": {
-    "message": "Jak tylko to zrobimy, proszę odświeżyć stronę.",
-    "description": "Message for help flow in popup menu."
-  },
   "checked_basics": {
     "message": "Sprawdziliśmy podstawy i zaktualizowaliśmy twoje listy filtrów.",
     "description": "Message for help flow in popup menu."
@@ -3278,5 +3266,9 @@
   "always": {
     "message": "Zawsze",
     "description": "The button text on the popup menu"
+  },
+  "done_reload_page": {
+    "message": "Jak tylko to zrobimy, proszę odświeżyć stronę.",
+    "description": "text on panel in the help flow"
   }
 }
