--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -155,10 +155,6 @@
     "message": "İyi görünüyor",
     "description": "Confirmation button after user chose what to block on the page"
   },
-  "buttonback": {
-    "message": "Geri",
-    "description": "Back to previous page button"
-  },
   "findingads": {
     "message": "Reklamlar bulunuyor..\n\nBu sadece birkaç saniye sürecek.",
     "description": "'Block an ad' wizard loading message"
@@ -442,7 +438,7 @@
     "description": "A filter list combined with EasyList"
   },
   "filteridcac": {
-    "message": "Çerezler umrumda değil",
+    "message": "I Don't Care About Cookies",
     "description": "A filter list"
   },
   "filtereasyprivacy": {
@@ -1386,10 +1382,6 @@
   "only_block_ads_on_these_sites": {
     "message": "Sadece bu sitelerdeki reklamları engelle:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
-  },
-  "format_site1_site2_site3": {
-    "message": "Biçim: ~site1.com|~site2.com|~haberler.site3.org",
-    "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
   },
   "warning_overrules_filters": {
     "message": "Dikkat: bu sitelerin dışında tüm sitelerde reklamları görebileceksiniz!\n Kullandığınız filtreler bu siteler dışında geçersiz olacak.",
@@ -2535,10 +2527,6 @@
     "message": "AdBlock, sorunun olup olmadığını görmek için filtre listelerinizi şimdi güncelliyor.",
     "description": "Message for help flow in popup menu."
   },
-  "done_reload_page": {
-    "message": "İşimiz biter bitmez, lütfen sayfayı yeniden yükleyin.",
-    "description": "Message for help flow in popup menu."
-  },
   "checked_basics": {
     "message": "Temel bilgileri kontrol ettik ve filtre listelerinizi güncelledik.",
     "description": "Message for help flow in popup menu."
@@ -3234,5 +3222,13 @@
   "always": {
     "message": "Her Zaman",
     "description": "The button text on the popup menu"
+  },
+  "done_reload_page": {
+    "message": "İşimiz biter bitmez, lütfen sayfayı yeniden yükleyin.",
+    "description": "text on panel in the help flow"
+  },
+  "fun_way_customize": {
+    "message": "Temalar tarayıcınızdaki AdBlock'u kişiselleştirmek için eğlenceli bir yol.",
+    "description": "Description of Themes on the main Premium options page"
   }
 }
