--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -147,10 +147,6 @@
     "message": "Pokračovat",
     "description": "Confirmation button after user chose what to block on the page"
   },
-  "buttonback": {
-    "message": "Zpět",
-    "description": "Back to previous page button"
-  },
   "findingads": {
     "message": "Hledání reklam...\n\nBude to trvat pouze chvilku.",
     "description": "'Block an ad' wizard loading message"
@@ -1309,10 +1305,6 @@
     "message": "Blokovat reklamy pouze na těchto stránkách:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
   },
-  "format_site1_site2_site3": {
-    "message": "Formát: ~stranka1.cz|~stranka2.cz|~zpravy.stranka3.cz",
-    "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
-  },
   "warning_overrules_filters": {
     "message": "Upozornění: Na všech ostatních stránkách uvidíte reklamy!\nToto má přednost před všemi ostatními filtry pro tyto stránky.",
     "description": "Message on the 'Customize' tab of the options page, explaining the danger of adding a allowlist filter for all websites with only some exceptions."
@@ -2353,10 +2345,6 @@
     "message": "AdBlock nyní aktualizuje vaše filtry, aby zjistil, zda problém byl v nich.",
     "description": "Message for help flow in popup menu."
   },
-  "done_reload_page": {
-    "message": "Jakmile budeme hotovi, prosím obnovte stránku.",
-    "description": "Message for help flow in popup menu."
-  },
   "checked_basics": {
     "message": "Zkontrolovali jsme základy a aktualizovali jsme vaše filtry.",
     "description": "Message for help flow in popup menu."
@@ -2984,5 +2972,9 @@
   "custom_image_supported_file_types": {
     "message": "*.bmp, *.gif, *.jpeg, *.png, *.svg, *.tiff, *.webp",
     "description": "supported file types, shown on the error message dialog box when a user selects a unsupported file type"
+  },
+  "done_reload_page": {
+    "message": "Jakmile budeme hotovi, prosím obnovte stránku.",
+    "description": "text on panel in the help flow"
   }
 }
