--- a/_locales/gl/messages.json
+++ b/_locales/gl/messages.json
@@ -23,6 +23,10 @@
     "message": "AdBlock. O bloqueador n. º 1 con máis de 200 millóns de descargas. Bloquea anuncios por toda a rede.",
     "description": "Description for the AdBlock for Edge extension. Should not exceed 132 characters."
   },
+  "name_adblock_on_youtube": {
+    "message": "AdBlock on YouTube",
+    "description": "Name of version of the AdBlock extension that only blocks ads on YouTube. Other strings that refer to the 'AdBlock on YouTube' extension should use this name."
+  },
   "adblock_click_for_details": {
     "message": "AdBlock - preme para máis detalles",
     "description": "Tooltip on the AdBlock button, to help users understand that they can click the button to access more options."
@@ -67,28 +71,8 @@
     "message": "Para agochar o botón, preme co botón dereito nel e selecciona 'Eliminar da barra de ferramentas'. Podes volvelo mostrar no menú Firefox -> Personalizar.",
     "description": "Message explaining how to hide the AdBlock toolbar button. 'Remove from Toolbar' should match the text that Firefox displays when you right click a toolbar button, and 'Customize' should match the text that shows when you click the button on the Firefox toolbar with three lines."
   },
-  "sliderexplanation": {
-    "message": "Move a barra ata que o anuncio estea correctamente bloqueado e a páxina se poida ver tal e como se desexa.",
-    "description": "'Block an ad' wizard usage explanation"
-  },
   "slidertitle": {
     "message": "Paso 1: Descubre o que podes bloquear",
-    "description": "'Block an ad' wizard title"
-  },
-  "blacklisteroptions1": {
-    "message": "Que pensas que será certo sobre este anuncio cada vez que visitas esta páxina?",
-    "description": "'Block an ad' wizard attribute choice page"
-  },
-  "blacklisternotsure": {
-    "message": "Non estás seguro? Daquela simplemente preme en \"Bloquéao!\".",
-    "description": "'Block an ad' wizard attribute choice page"
-  },
-  "blacklisterthefilter": {
-    "message": "O filtro, que pode ser modificado na páxina de Opcións:",
-    "description": "'Block an ad' wizard attribute choice page"
-  },
-  "blacklisteroptionstitle": {
-    "message": "Último paso: que fai disto un anuncio?",
     "description": "'Block an ad' wizard title"
   },
   "blacklisternofilter": {
@@ -163,21 +147,9 @@
     "message": "Pinta ben",
     "description": "Confirmation button after user chose what to block on the page"
   },
-  "buttonback": {
-    "message": "Volver",
-    "description": "Back to previous page button"
-  },
   "findingads": {
     "message": "Na procura de anuncios...\n\nIsto pode levar un tempiño.",
     "description": "'Block an ad' wizard loading message"
-  },
-  "blockanadtitle": {
-    "message": "Bloquear un anuncio",
-    "description": "Title of the first two dialogs of the 'Block an ad' wizard"
-  },
-  "clickthead": {
-    "message": "Preme no anuncio e axudareiche a bloquealo.",
-    "description": "User has to click the ad they want to block."
   },
   "adblock_wont_run_on_pages_matching": {
     "message": "AdBlock non se executa en ningunha páxina destas páxinas:",
@@ -461,10 +433,6 @@
     "message": "Indonesio + EasyList",
     "description": "A filter list combined with EasyList"
   },
-  "filtermalware": {
-    "message": "Protección contra software malicioso",
-    "description": "A filter list"
-  },
   "filterbitcoin_mining_protection": {
     "message": "Listaxe de protección mineira de criptomoedas (Bitcoin)",
     "description": "A filter list"
@@ -576,34 +544,6 @@
   "adreportvoluntary": {
     "message": "Informar dun anuncio é voluntario. Axuda a outras persoas xa que permite que os editores das listaxes de filtros poidan bloquealo para todo o mundo. Se non te sentes altruísta, non hai problema. Pecha esta páxina e [[bloquea o anuncio]] só para ti.",
     "description": "Introduction of the ad reporting page"
-  },
-  "malwarenotificationcheckboxmessage": {
-    "message": "Queres que AdBlock che notifique cando detecte software malicioso?",
-    "description": "Checkbox displayed when subscribing to the 'Malware protection' filter list on the Filter lists tab of the Options page"
-  },
-  "malwarenotificationmessage": {
-    "message": "AdBlock bloqueou unha descarga dun sitio coñecido por aloxar software malicioso.",
-    "description": "Notification when a potential malware request has been blocked. This message should be under 90 characters!"
-  },
-  "malwarenotificationlearnmore": {
-    "message": "Saber mais sobre software malicioso",
-    "description": "Button on the malware notification that opens a page about malware on the AdBlock website. Message should be under 45 characters!"
-  },
-  "malwarenotificationdisablethesemessages": {
-    "message": "Desactivar estas notificacións",
-    "description": "Button on the malware notification to disable future notifications. Message should be under 45 characters!"
-  },
-  "malwarecheck": {
-    "message": "Comprobación de software malicioso que pode incluír anuncios:",
-    "description": "Section header on the ad report page"
-  },
-  "malwarewarning": {
-    "message": "O teu ordenador pode estar infectado por software malicioso. Preme [[aquí]] para máis información.",
-    "description": "On the ad report page, the ads the user is seeing might be caused by malware/adware"
-  },
-  "malwarenotfound": {
-    "message": "Non se atopou software malicioso.",
-    "description": "On the ad report page, the ads the user is seeing are probably not caused by malware/adware"
   },
   "disableaa": {
     "message": "Comproba os filtros de Anuncios Aceptables:",
@@ -1109,10 +1049,6 @@
     "message": "Menú emerxente do AdBlock",
     "description": "Title for the popup menu."
   },
-  "block_an_ad_on_this_page": {
-    "message": "Bloquea un anuncio nesta páxina",
-    "description": "Toolbar button menu entry and context menu entry"
-  },
   "block_this_ad": {
     "message": "Bloquear este anuncio",
     "description": "Toolbar button menu entry and context menu entry"
@@ -1205,10 +1141,6 @@
     "message": "Non executar en páxinas deste dominio",
     "description": "Menu entry to open the allowlist wizard"
   },
-  "dont_run_on_pages_on_site": {
-    "message": "Non executar en páxinas deste sitio",
-    "description": "Menu entry to open the allowlist wizard"
-  },
   "disabled_on_this_page": {
     "message": "AdBlock está desactivado nesta páxina.",
     "description": "Message shown in toolbar button on web pages that have been allowlisted"
@@ -1232,10 +1164,6 @@
   "status_universal_paused": {
     "message": "AdBlock está en pausa en todos os sitios.",
     "description": "Message shown in toolbar button when AdBlock is not running on all domains"
-  },
-  "status_domain_paused": {
-    "message": "AdBlock está en pausa neste sitio.",
-    "description": "Message shown in toolbar button when AdBlock is not running on a specific domain"
   },
   "resume_blocking_ads": {
     "message": "Retomar o bloqueo de anuncios",
@@ -1291,10 +1219,6 @@
   },
   "undo_last_block": {
     "message": "Desfacer os meus bloqueos neste dominio",
-    "description": "Menu entry to let the user cancel the result of running the blocklist wizard."
-  },
-  "undo_last_block_site": {
-    "message": "Desfacer os meus bloqueos neste sitio",
     "description": "Menu entry to let the user cancel the result of running the blocklist wizard."
   },
   "dont_run_on_this_page": {
@@ -1380,10 +1304,6 @@
   "only_block_ads_on_these_sites": {
     "message": "Bloquear anuncios só nestes sitios:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
-  },
-  "format_site1_site2_site3": {
-    "message": "Formato: ~sitio1.com|~sitio2.com|~noticias.sitio3.org",
-    "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
   },
   "warning_overrules_filters": {
     "message": "Aviso: En todos os demais sitios web verás anuncios!\nIsto anula todos os outros filtros para estes sitios.",
@@ -1509,17 +1429,9 @@
     "message": "Soporte de AdBlock",
     "description": "Title of the Support tab of the Options page"
   },
-  "whatsnew": {
-    "message": "Que novidades trae a última versión? Mira o [[changelog]]!",
-    "description": "Link to display the changelog on the Support tab"
-  },
   "englishonly": {
     "message": "Só en inglés",
     "description": "Lets the user know that a link/page is only available in English."
-  },
-  "foundbug": {
-    "message": "Atopaches un erro?",
-    "description": "Subtitle on the Support tab"
   },
   "adblockupdates": {
     "message": "Actualizacións de AdBlock",
@@ -1529,33 +1441,9 @@
     "message": "Queres saber que hai detrás para que funcione AdBlock?",
     "description": "Subtitle on the Support tab. This section contains links to the AdBlock source code and contributors. In this context, 'tick' can be replaced with the word 'work'."
   },
-  "questionoridea": {
-    "message": "Tes algunha pregunta ou suxestión?",
-    "description": "Subtitle on the Support tab"
-  },
-  "sourcecode": {
-    "message": "O código fonte está [[dispoñible para todos]]!",
-    "description": "Link to the source code of AdBlock on the Support tab"
-  },
-  "contributors": {
-    "message": "Tamén temos unha páxina en que podes ver as [[persoas que fan posible AdBlock]]!",
-    "description": "Link to the contributors page on the Support tab"
-  },
-  "debuginfo": {
-    "message": "O noso equipo solicitou información de depuración? Faga click [[aquí]] para iso",
-    "description": "Users can click this link to provide debug information to AdBlock staff"
-  },
-  "bugreport": {
-    "message": "Por que non nos envías un [[informe de erros]]?",
-    "description": "Link to send a bug report on the Support tab"
-  },
   "supportsite": {
     "message": "Fáinolo saber no noso [[sitio de soporte]]!",
     "description": "Link to the support site on the Support tab"
-  },
-  "ad_report_please": {
-    "message": "Se estás a ver este anuncio, non fagas un informe de erros, senón un [[informe de anuncio]]!",
-    "description": "Link to the ad report page on AdBlock's help site. This is found on the Support tab of the options."
   },
   "resourceblocktitle": {
     "message": "Todos os recursos",
@@ -1805,14 +1693,6 @@
     "message": "Activar o MyAdBlock",
     "description": "The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
   },
-  "adblockprotectenrollmentbutton": {
-    "message": "Próbao agora — É de balde",
-    "description": "The text of the button in the menu item in the popup menu for AdBlock Protect extension.  Will automatically be converted to all uppercase"
-  },
-  "adblockprotectenrollmenttext": {
-    "message": "Mantén a túa información personal segura con AdBlock Protect",
-    "description": "The text of the menu item in the popup menu that takes users for the AdBlock Protect extension"
-  },
   "myadblockoptionspageheader": {
     "message": "Opcións do MyAdBlock",
     "description": "The text of the header the MyAdBlock Options page"
@@ -1836,6 +1716,10 @@
   "landscapechannelswitchlabel": {
     "message": "Paisaxes",
     "description": "The label text for the Landscape switch on the MyAdBlock Options page"
+  },
+  "oceanchannelswitchlabel": {
+    "message": "Océano",
+    "description": "The label text for the Ocean switch on the MyAdBlock Options page"
   },
   "customchannelswitchlabel": {
     "message": "Personalizado",
@@ -1905,29 +1789,9 @@
     "message": "Enviar suxestións",
     "description": "Text on the MyAdBlock feedback button"
   },
-  "error_msg_header": {
-    "message": "Uy! Sentímolo, o menú de AdBlock tivo problemas para cargarse.",
-    "description": "The text on the popup menu when an error has occurred"
-  },
-  "error_msg_help_us": {
-    "message": "Axúdenos a resolver este problema enviándonos algúns datos de depuración: Click ",
-    "description": "DO NOT TRANSLATE"
-  },
   "error_msg_thank_you": {
     "message": "Grazas",
     "description": "The text on the popup menu when an error has occurred"
-  },
-  "error_msg_reload": {
-    "message": "A continuación, tente volver a cargar a extensión: Click ",
-    "description": "DO NOT TRANSLATE"
-  },
-  "error_msg_help": {
-    "message": "Se iso non funciona, consulte aquí para obter máis axuda: Click ",
-    "description": "DO NOT TRANSLATE"
-  },
-  "error_msg_here": {
-    "message": "aquí",
-    "description": "DO NOT TRANSLATE"
   },
   "generaloptions2": {
     "message": "Opcións xerais",
@@ -2493,10 +2357,6 @@
     "message": "páxina de opcións",
     "description": "General text used to define the extension options page."
   },
-  "pause_on_this_site": {
-    "message": "Deter neste sitio.",
-    "description": "First sentence in the aria-label of the pop-up menu action to pause blocking ads on this site."
-  },
   "adblock_will_pause_on_this_site": {
     "message": "Se se fai clic, AdBlock deixará de bloquear anuncios neste sitio.",
     "description": "Second sentence in the aria-label of the pop-up menu action to pause blocking ads on this site."
@@ -2568,18 +2428,6 @@
   "never_lose_settings": {
     "message": "Aplique esta configuración a todos os seus dispositivos e asegúrese de non perder nunca a configuración de AdBlock con Copia de seguridade e Sincronización.",
     "description": "Part 2 of a call-to-action on the allowlist and blocklist wizards"
-  },
-  "successfully_blocked_ad": {
-    "message": "Has bloqueado correctamente este anuncio",
-    "description": "Part of a message on the blocklist wizard"
-  },
-  "future_ads_blocked": {
-    "message": "No futuro, os anuncios que cumpran con estas regras continuarán sendo bloqueados.",
-    "description": "Part of a message on the blocklist wizard"
-  },
-  "rule_added_filters": {
-    "message": "A seguinte regra foi agregada aos teus filtros:",
-    "description": "Part of a message on the blocklist wizard"
   },
   "blocked_something": {
     "message": "Acabas de bloquear algo neste sitio!",
