--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -202,7 +202,7 @@
     "description": "section title on hidding wizard, shown when advance user option enabled"
   },
   "confirm_msg": {
-    "message": "Verifica che il tipo e l'ID di questo elemento siano corretti:",
+    "message": "Verifica che gli attributi di questo elemento siano corretti:",
     "description": "text on hidding wizard, shown when advance user option enabled"
   },
   "findingads": {
@@ -461,6 +461,10 @@
   },
   "filterannoyances": {
     "message": "Fanboy's Annoyances (blocca i pop-up sulle pagine, i social media e i relativi widget, nonché altri fastidi)",
+    "description": "A filter list"
+  },
+  "filterfb_notifications": {
+    "message": "Fanboy's Notifications (blocca i pop-up nelle pagine, i social media e i relativi widget, e altri fastidi)",
     "description": "A filter list"
   },
   "filterwarning_removal": {
@@ -1445,8 +1449,8 @@
     "message": "Blocca la pubblicità solo su questi siti:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
   },
-  "format_site1_site2_site3": {
-    "message": "Formato: ~site1.com|~site2.com|~news.site3.org",
+  "format": {
+    "message": "Formato:",
     "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
   },
   "warning_overrules_filters": {
@@ -2030,7 +2034,7 @@
     "description": "DO NOT TRANSLATE The text on the popup menu when an error has occurred"
   },
   "error_msg_help_us_partI": {
-    "message": "Help us resolve this problem  ",
+    "message": "Help us resolve this problem ",
     "description": "DO NOT TRANSLATE"
   },
   "error_msg_help_us_partII": {
@@ -3412,5 +3416,111 @@
   "learn_more_lower": {
     "message": "Maggiori informazioni",
     "description": "GFC messaging on the popup menu"
+  },
+  "distraction_control": {
+    "message": "Controllo distrazioni",
+    "description": "Name of a Premium option"
+  },
+  "take_control": {
+    "message": "Prendi il controllo del tuo browser e naviga come vuoi!",
+    "description": "Description of the distraction control option"
+  },
+  "goodbye_distractions": {
+    "message": "Di' addio ai pop-up sulle newsletter, ai video fluttuanti e ad altre distrazioni fastidiose col Controllo distrazioni.",
+    "description": "Description of the distraction control option"
+  },
+  "block_site_notifications": {
+    "message": "Blocco notifiche siti",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "decline_allow_notifications": {
+    "message": "Rifiuta automaticamente le richieste \"consenti notifiche\" dai siti che visiti.",
+    "description": "Description of 'block site notifications' on the distraction control options page"
+  },
+  "stop_autoplay_videos": {
+    "message": "Ferma i video automatici",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "prevent_videos": {
+    "message": "Impedisci la visualizzazione automatica dei video e impedisci a quelli \"fluttuanti\" di seguirti mentre navighi.",
+    "description": "Description of 'stop autoplay videos' on the distraction control options page"
+  },
+  "hide_newsletter_popups": {
+    "message": "Nascondi i pop-up sulle newsletter",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "block_newsletter_popups": {
+    "message": "Blocca i fastidiosi pop-up che ti invitano a iscriverti alla newsletter dei siti.",
+    "description": "Description of 'hide newsletter pop-ups' on the distraction control options page"
+  },
+  "ignore_survey_requests": {
+    "message": "Ignora richieste sui sondaggi",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "dismiss_invitations": {
+    "message": "Rifiuta immediatamente gli inviti dei siti a partecipare ai sondaggi.",
+    "description": "Description of 'ignore survey requests' on the distraction control options page"
+  },
+  "swap_ads_for_images": {
+    "message": "Sostituisci gli annunci con le immagini",
+    "description": "Sub-header describing Image Swap on the main Premium options page"
+  },
+  "personalize_experience": {
+    "message": "Personalizza la tua navigazione e ottieni ancora di più da AdBlock per $browser$.",
+    "description": "Description of Image Swap on the main Premium options page",
+    "placeholders": {
+      "browser": {
+        "content": "$1",
+        "example": "Chrome"
+      }
+    }
+  },
+  "block_and_replace": {
+    "message": "Con Sostituzione immagini, continueremo a bloccare le pubblicità, ma ne sostituiremo alcune con delle foto delle tue categorie preferite.",
+    "description": "Description of Image Swap on the main Premium options page"
+  },
+  "customize_your_adblock": {
+    "message": "Personalizza il tuo AdBlock",
+    "description": "Sub-header describing Themes on the main Premium options page"
+  },
+  "fun_way_customize": {
+    "message": "I temi sono un modo divertente per personalizzare AdBlock sul tuo browser.",
+    "description": "Description of Themes on the main Premium options page"
+  },
+  "take_control_easy": {
+    "message": "Prendi il controllo dell'aspetto e della dimensione del font di AdBlock grazie ai comandi intuitivi. Rendi tuo AdBlock!",
+    "description": "Description of Themes on the main Premium options page"
+  },
+  "save_settings_multiple": {
+    "message": "Salva le tue impostazioni di AdBlock su più dispositivi",
+    "description": "Sub-header describing Backup & Sync on the main Premium options page"
+  },
+  "take_custom_with_you": {
+    "message": "Porta con te le tue regole personalizzate di blocco degli annunci, le iscrizioni alle liste di filtri e le tue liste bianche su tutti i tuoi profili Chrome.",
+    "description": "Description of Backup & Sync on the main Premium options page"
+  },
+  "set_up_once": {
+    "message": "Configura AdBlock una volta e porta le impostazioni con te!",
+    "description": "Description of Backup & Sync on the main Premium options page"
+  },
+  "annoyance_free_browsing": {
+    "message": "Navigazione senza fastidi",
+    "description": "Description of Distraction Control on the main Premium options page"
+  },
+  "bypass_mode": {
+    "message": "Modalità Bypass",
+    "description": "Header on the main Premium options page"
+  },
+  "see_fewer_walls": {
+    "message": "Vedi meno barriere anti-AdBlock",
+    "description": "Sub-header describing Bypass Mode on the main Premium options page"
+  },
+  "popups_disable_adblock": {
+    "message": "I pop-up che chiedono di disattivare AdBlock stanno diventando sempre più frequenti nel web.",
+    "description": "Description of Bypass Mode on the main Premium options page"
+  },
+  "get_around_popups": {
+    "message": "Con la modalità Bypass potrai aggirare alcuni di questi pop-up senza disattivare AdBlock.",
+    "description": "Description of Bypass Mode on the main Premium options page"
   }
 }
