--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -202,7 +202,7 @@
     "description": "section title on hidding wizard, shown when advance user option enabled"
   },
   "confirm_msg": {
-    "message": "このアイテムのタイプとIDが正しいことを確認してください:",
+    "message": "このアイテムの属性が正しいことを確認してください:",
     "description": "text on hidding wizard, shown when advance user option enabled"
   },
   "findingads": {
@@ -461,6 +461,10 @@
   },
   "filterannoyances": {
     "message": "オタクの厄介な問題 (ページ内広告、SNS関連ウィジェット、他の迷惑な広告)",
+    "description": "A filter list"
+  },
+  "filterfb_notifications": {
+    "message": "オタクの通知 (ページ内広告、SNS関連ウィジェット、他の迷惑な広告)",
     "description": "A filter list"
   },
   "filterwarning_removal": {
@@ -1445,8 +1449,8 @@
     "message": "このサイトのみで広告をブロック:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
   },
-  "format_site1_site2_site3": {
-    "message": "形式: ~site1.com|~site2.com|~news.site3.org",
+  "format": {
+    "message": "形式:",
     "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
   },
   "warning_overrules_filters": {
@@ -2030,7 +2034,7 @@
     "description": "DO NOT TRANSLATE The text on the popup menu when an error has occurred"
   },
   "error_msg_help_us_partI": {
-    "message": "Help us resolve this problem  ",
+    "message": "この問題の解決にご協力ください",
     "description": "DO NOT TRANSLATE"
   },
   "error_msg_help_us_partII": {
@@ -3412,5 +3416,111 @@
   "learn_more_lower": {
     "message": "詳細はこちら",
     "description": "GFC messaging on the popup menu"
+  },
+  "distraction_control": {
+    "message": "ディストラクション管理",
+    "description": "Name of a Premium option"
+  },
+  "take_control": {
+    "message": "自分のブラウザを制御して、思い通りのブラウジングを実現しましょう。",
+    "description": "Description of the distraction control option"
+  },
+  "goodbye_distractions": {
+    "message": "ニュースレターのポップアップやフローティング広告など、気が散るようなものは「ディストラクション管理」で解決しましょう。",
+    "description": "Description of the distraction control option"
+  },
+  "block_site_notifications": {
+    "message": "サイト通知をブロック",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "decline_allow_notifications": {
+    "message": "ユーザーが訪問するウェブサイトからの「通知の許可」リクエストを自動的に拒否します。",
+    "description": "Description of 'block site notifications' on the distraction control options page"
+  },
+  "stop_autoplay_videos": {
+    "message": "自動再生の動画をストップ",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "prevent_videos": {
+    "message": "動画が自動的に再生されないようにしたり、ブラウズ中にフローティング広告が出現しないようにします。\n",
+    "description": "Description of 'stop autoplay videos' on the distraction control options page"
+  },
+  "hide_newsletter_popups": {
+    "message": "ニュースレターのポップアップを非表示化",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "block_newsletter_popups": {
+    "message": "ウェブサイトのニュースレターへの登録を促す迷惑なポップアップをブロックします。",
+    "description": "Description of 'hide newsletter pop-ups' on the distraction control options page"
+  },
+  "ignore_survey_requests": {
+    "message": "アンケート依頼を無視",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "dismiss_invitations": {
+    "message": "ウェブサイトからのアンケートへの勧誘を即座に断ります。",
+    "description": "Description of 'ignore survey requests' on the distraction control options page"
+  },
+  "swap_ads_for_images": {
+    "message": "広告の画像切り替え",
+    "description": "Sub-header describing Image Swap on the main Premium options page"
+  },
+  "personalize_experience": {
+    "message": "ブラウジング体験をカスタマイズし、$browser$用AdBlockをさらに活用しましょう。",
+    "description": "Description of Image Swap on the main Premium options page",
+    "placeholders": {
+      "browser": {
+        "content": "$1",
+        "example": "Chrome"
+      }
+    }
+  },
+  "block_and_replace": {
+    "message": "画像切り替え機能では、ブロックした広告の場所にあなたが好きな写真を表示させます。",
+    "description": "Description of Image Swap on the main Premium options page"
+  },
+  "customize_your_adblock": {
+    "message": "AdBlockをカスタマイズ",
+    "description": "Sub-header describing Themes on the main Premium options page"
+  },
+  "fun_way_customize": {
+    "message": "テーマは、ブラウザ上でAdBlockをカスタマイズできる楽しい機能です。",
+    "description": "Description of Themes on the main Premium options page"
+  },
+  "take_control_easy": {
+    "message": "AdBlockの見た目、快適性、フォントサイズをお手軽操作で変更できます。AdBlockを自分色に染めましょう！",
+    "description": "Description of Themes on the main Premium options page"
+  },
+  "save_settings_multiple": {
+    "message": "複数のデバイスのAdBlockの設定を保存しましょう",
+    "description": "Sub-header describing Backup & Sync on the main Premium options page"
+  },
+  "take_custom_with_you": {
+    "message": "Chromeの全てのアカウントで広告ブロックルールの設定やホワイトリストなどを共有することができます。",
+    "description": "Description of Backup & Sync on the main Premium options page"
+  },
+  "set_up_once": {
+    "message": "AdBlockを一度設定すれば、その設定を持ち歩くことができます。",
+    "description": "Description of Backup & Sync on the main Premium options page"
+  },
+  "annoyance_free_browsing": {
+    "message": "煩わしさのないブラウジングを実現",
+    "description": "Description of Distraction Control on the main Premium options page"
+  },
+  "bypass_mode": {
+    "message": "バイパスモード",
+    "description": "Header on the main Premium options page"
+  },
+  "see_fewer_walls": {
+    "message": "アンチAdBlockウォールを減らしましょう",
+    "description": "Sub-header describing Bypass Mode on the main Premium options page"
+  },
+  "popups_disable_adblock": {
+    "message": "AdBlockの無効化を要求するポップアップが表示されるウェブサイトがますます多くなっています。",
+    "description": "Description of Bypass Mode on the main Premium options page"
+  },
+  "get_around_popups": {
+    "message": "バイパスモードを使えば、AdBlockを無効にすることなく、ポップアップを回避することができます。",
+    "description": "Description of Bypass Mode on the main Premium options page"
   }
 }
