--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -23,6 +23,10 @@
     "message": "AdBlock. Nr.1 în blocarea de reclame cu peste 200 milioane de descărcări. Blochează reclamele pe tot webul.",
     "description": "Description for the AdBlock for Edge extension. Should not exceed 132 characters."
   },
+  "description_yt": {
+    "message": " Singurul blocant de reclame YouTube creat de AdBlock, cea mai populară extensie Chrome cu 60 de milioane de utilizatori în întreaga lume",
+    "description": "Description for the AdBlock on YouTube extension. Should not exceed 132 characters."
+  },
   "name_adblock_on_youtube": {
     "message": "AdBlock pe YouTube",
     "description": "Name of version of the AdBlock extension that only blocks ads on YouTube. Other strings that refer to the 'AdBlock on YouTube' extension should use this name."
@@ -75,9 +79,43 @@
     "message": "Pentru a ascunde butonul: dați clic dreapta pe el și alegeți 'Elimină din Bara de Instrumente'. \nÎl puteți afișa din nou din meniul Firefox -> Personalizare.",
     "description": "Message explaining how to hide the AdBlock toolbar button. 'Remove from Toolbar' should match the text that Firefox displays when you right click a toolbar button, and 'Customize' should match the text that shows when you click the button on the Firefox toolbar with three lines."
   },
+  "isithidden": {
+    "message": " Elementul este ascuns?",
+    "description": "'Block an ad' wizard usage explanation"
+  },
+  "sliderexplanation": {
+    "message": "Dacă nu, utilizați cursorul pentru a ascunde elemente adiționale pe această pagină:",
+    "description": "'Block an ad' wizard usage explanation"
+  },
+  "sliderwarning": {
+    "message": "Aveți grijă, ascunderea prea multor elemente pe o pagină, poate rupe anumite funcționalități",
+    "description": "'Block an ad' wizard usage explanation"
+  },
   "slidertitle": {
     "message": "Pasul 1: Găsiți ce vreți să blocați",
     "description": "'Block an ad' wizard title"
+  },
+  "blacklisteroptions1": {
+    "message": "Păstrați acest element ascuns?",
+    "description": "'Block an ad' wizard attribute choice page"
+  },
+  "blacklisternotsure_part_I": {
+    "message": "O regulă va fi adăugată la setările dvs., care va ascunde acest articol, de fiecare dată când vizitați site-ul.",
+    "description": "'Block an ad' wizard attribute choice page"
+  },
+  "blacklisternotsure_part_II": {
+    "message": "Puteți anula acest lucru oricând, selectând „Anulează ascunderea elementelor mele” din meniul AdBlock.",
+    "description": "'Block an ad' wizard attribute choice page"
+  },
+  "hiddenelementmessagecount": {
+    "message": "$count$ elemente de pe această pagină sunt, de asemenea, ascunse temporar",
+    "description": "The total number of ads or 'things' hidden on a page by the new rule.",
+    "placeholders": {
+      "count": {
+        "content": "$1",
+        "example": "2"
+      }
+    }
   },
   "blacklisternofilter": {
     "message": "Niciun filtru specificat!",
@@ -115,6 +153,10 @@
       }
     }
   },
+  "warning": {
+    "message": "avertisment",
+    "description": "Warns the user about an error."
+  },
   "blacklistersinglematch": {
     "message": "Corespunde cu 1 element de pe pagină",
     "description": "Tells the user only one match was found"
@@ -151,13 +193,21 @@
     "message": "Arată bine",
     "description": "Confirmation button after user chose what to block on the page"
   },
-  "buttonback": {
-    "message": "Înapoi",
-    "description": "Back to previous page button"
+  "add_info": {
+    "message": "Informații suplimentare",
+    "description": "section title on hidding wizard, shown when advance user option enabled"
   },
   "findingads": {
     "message": "Căutare reclame... \n\nVa rugăm așteptați.",
     "description": "'Block an ad' wizard loading message"
+  },
+  "blockanadtitle": {
+    "message": "Asistent de ascundere AdBlock",
+    "description": "Title of the first two dialogs of the 'Block an ad' wizard"
+  },
+  "clickthead": {
+    "message": "Faceți clic pe orice element de pe această pagină, pe care doriți să-l ascundeți.",
+    "description": "User has to click the ad they want to block."
   },
   "adblock_wont_run_on_pages_matching": {
     "message": "AdBlock nu va rula pe vreo pagină care conține:",
@@ -174,6 +224,10 @@
   "buttonexclude": {
     "message": "Exclude",
     "description": "Button for excluding a domain in the allowlist wizard"
+  },
+  "buttonconfirm": {
+    "message": "Confirmați",
+    "description": "Button for confirming a new rule in the hiding wizard"
   },
   "reloadpageafterwhitelist": {
     "message": "Reîncărcați pagina.",
@@ -399,6 +453,10 @@
   },
   "filterannoyances": {
     "message": "Fanboy's Annoyances (blochează pop-up-uri în pagină, social media și widget-uri conexe și alte deranjări)",
+    "description": "A filter list"
+  },
+  "filterfb_notifications": {
+    "message": "Notificările Fanboy (blochează pop-up-uri în pagină, social media și widget-uri conexe și alte deranjări)",
     "description": "A filter list"
   },
   "filterwarning_removal": {
@@ -1383,8 +1441,8 @@
     "message": "Blocați reclame doar pe aceste site-uri:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
   },
-  "format_site1_site2_site3": {
-    "message": "Format: ~site1.com|~site2.com|~știri.site3.org",
+  "format": {
+    "message": "Format:",
     "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
   },
   "warning_overrules_filters": {
@@ -2607,10 +2665,6 @@
     "message": "AdBlock aduce acum la zi listele de filtre ca să vadă dacă asta ar putea fi problema.",
     "description": "Message for help flow in popup menu."
   },
-  "done_reload_page": {
-    "message": "Imediat ce terminăm, vă rugăm să reîncărcați pagina.",
-    "description": "Message for help flow in popup menu."
-  },
   "checked_basics": {
     "message": "Am verificat elementele de bază și am actualizat listele de filtre.",
     "description": "Message for help flow in popup menu."
@@ -2807,6 +2861,10 @@
     "message": "Află Mai Multe",
     "description": "Text in the aria-label attribute of an icon linking to extra information about an option."
   },
+  "find_out_more": {
+    "message": "Aflați mai multe",
+    "description": "Text in the button on the Premium CTA on the hiding wizard."
+  },
   "update_filter_lists_now": {
     "message": "Actualizați Lista Filtrelor Acum",
     "description": "Text in the aria-label attribute of the 'update now' button on the Options page in the Filter Lists tab."
@@ -2899,9 +2957,25 @@
     "message": "Tocmai ați adăugat un site în lista de permisiuni!",
     "description": "Part 1 of a call-to-action on the allowlist wizard"
   },
+  "dont_show_me_again": {
+    "message": "Nu-mi arătați din nou acest mesaj",
+    "description": "opt out option on all-to-action on the blocklist / hiding wizard"
+  },
   "never_lose_settings": {
     "message": "Aplicați setarea pe toate aparatele dvs. și vă asigurați că nu pierdeți niciodată setările AdBlock cu Backup & Sincronizare.",
     "description": "Part 2 of a call-to-action on the allowlist and blocklist wizards"
+  },
+  "wizard_premium_cta_title": {
+    "message": "Hei, se pare că ți-ar putea plăcea AdBlock Premium",
+    "description": "Part of a message on the blocklist wizard"
+  },
+  "wizard_premium_cta_part_I": {
+    "message": "Tocmai ați blocat ceva pe acest site",
+    "description": "Part of a message on the blocklist wizard"
+  },
+  "wizard_premium_cta_part_II": {
+    "message": "Aplicați această preferință pe toate dispozitivele dvs. și asigurați-vă că nu pierdeți niciodată setările AdBlock cu Backup & Sincronizare.",
+    "description": "Part of a message on the blocklist wizard"
   },
   "blocked_something": {
     "message": "Tocmai ați blocat ceva pe acest site!",
@@ -3306,5 +3380,139 @@
   "always": {
     "message": "Întotdeauna",
     "description": "The button text on the popup menu"
+  },
+  "enable_on_this_site": {
+    "message": "Activați AdBlock pe acest site",
+    "description": "GFC messaging on the popup menu"
+  },
+  "premium_access_without_disabling": {
+    "message": "Funcțiile noi din AdBlock Premium, facilitează accesul la conținutul pe care îl iubiți, fără a dezactiva AdBlock.",
+    "description": "GFC messaging on the popup menu"
+  },
+  "dont_show_reminder": {
+    "message": "Nu-mi mai arătați acest memento",
+    "description": "GFC messaging on the popup menu"
+  },
+  "want_stop_seeing": {
+    "message": "Doriți să nu mai vedeți acestea?",
+    "description": "GFC messaging on the popup menu"
+  },
+  "access_without_disabling": {
+    "message": "Obțineți acces ușor la conținutul pe care îl iubiți, fără a dezactiva AdBlock!",
+    "description": "GFC messaging on the popup menu"
+  },
+  "learn_more_lower": {
+    "message": "Aflați mai multe",
+    "description": "GFC messaging on the popup menu"
+  },
+  "distraction_control": {
+    "message": "Control de distragere",
+    "description": "Name of a Premium option"
+  },
+  "take_control": {
+    "message": "Preluați controlul browserului dvs. și navigați așa cum doriți!",
+    "description": "Description of the distraction control option"
+  },
+  "goodbye_distractions": {
+    "message": "Spuneți la revedere ferestrelor pop-up cu buletine informative, videoclipurilor flotante și altor distrageri enervante, cu Controlul de distragere.",
+    "description": "Description of the distraction control option"
+  },
+  "block_site_notifications": {
+    "message": "Blocați notificările site-ului",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "decline_allow_notifications": {
+    "message": "Refuză automat cererile 'permiteți notificările' de la site-urile pe care le vizitați.",
+    "description": "Description of 'block site notifications' on the distraction control options page"
+  },
+  "stop_autoplay_videos": {
+    "message": "Opriți videoclipurile cu redare automate",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "prevent_videos": {
+    "message": "Împiedică redarea automată a videoclipurilor și oprește videoclipurile 'flotante' să vă urmărească în timp ce navigați.",
+    "description": "Description of 'stop autoplay videos' on the distraction control options page"
+  },
+  "hide_newsletter_popups": {
+    "message": "Ascundeți pop-up-uri cu buletine informative",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "block_newsletter_popups": {
+    "message": "Blochează ferestrele enervante care vă invită să vă înscrieți pentru buletinul informativ al unui site.",
+    "description": "Description of 'hide newsletter pop-ups' on the distraction control options page"
+  },
+  "ignore_survey_requests": {
+    "message": "Ignorați solicitările de sondaj",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "dismiss_invitations": {
+    "message": "Respinge instantaneu invitațiile site-urilor web pentru a participa la sondaje.",
+    "description": "Description of 'ignore survey requests' on the distraction control options page"
+  },
+  "done_reload_page": {
+    "message": "Imediat ce terminăm, vă rugăm să reîncărcați pagina.",
+    "description": "text on panel in the help flow"
+  },
+  "swap_ads_for_images": {
+    "message": "Schimbați reclame pentru imagini ",
+    "description": "Sub-header describing Image Swap on the main Premium options page"
+  },
+  "personalize_experience": {
+    "message": "Personalizați-vă experiența navigării și obțineți și mai mult de la AdBlock pentru $browser$.",
+    "description": "Description of Image Swap on the main Premium options page",
+    "placeholders": {
+      "browser": {
+        "content": "$1",
+        "example": "Chrome"
+      }
+    }
+  },
+  "block_and_replace": {
+    "message": "Cu Schimbul de imagini, vom bloca în continuare reclame, dar vom înlocui unele dintre ele cu fotografii din categoriile preferate. ",
+    "description": "Description of Image Swap on the main Premium options page"
+  },
+  "customize_your_adblock": {
+    "message": "Personalizați-vă AdBlock",
+    "description": "Sub-header describing Themes on the main Premium options page"
+  },
+  "fun_way_customize": {
+    "message": "Temele sunt un mod plăcut de a personaliza AdBlock în browser-ul dvs.",
+    "description": "Description of Themes on the main Premium options page"
+  },
+  "take_control_easy": {
+    "message": "Luați controlul aspectului, senzației și taliei fontului AdBlock cu controale ușor de folosit. Faceți-vă AdBloc personal!",
+    "description": "Description of Themes on the main Premium options page"
+  },
+  "save_settings_multiple": {
+    "message": "Salvați setările AdBlock pe mai multe dispozitive",
+    "description": "Sub-header describing Backup & Sync on the main Premium options page"
+  },
+  "take_custom_with_you": {
+    "message": "Vă preia regulile de blocare a anunțurilor personalizate, abonamentele la lista de filtre și lista albă în toate profilurile dvs. Chrome.",
+    "description": "Description of Backup & Sync on the main Premium options page"
+  },
+  "set_up_once": {
+    "message": "Setați AdBlock o dată și luați setările cu dvs!",
+    "description": "Description of Backup & Sync on the main Premium options page"
+  },
+  "annoyance_free_browsing": {
+    "message": "Experimentați navigarea fără distrageri",
+    "description": "Description of Distraction Control on the main Premium options page"
+  },
+  "bypass_mode": {
+    "message": "Mod Evitare",
+    "description": "Header on the main Premium options page"
+  },
+  "see_fewer_walls": {
+    "message": "Vedeți mai puține ziduri anti-AdBlock",
+    "description": "Sub-header describing Bypass Mode on the main Premium options page"
+  },
+  "popups_disable_adblock": {
+    "message": "Pop-up-urile care necesită dezactivarea AdBlock devin din ce în ce mai frecvente pe web.",
+    "description": "Description of Bypass Mode on the main Premium options page"
+  },
+  "get_around_popups": {
+    "message": "Cu Modul Evitare, veți putea să ocoliți unele dintre aceste ferestre pop-up fără a dezactiva AdBlock.",
+    "description": "Description of Bypass Mode on the main Premium options page"
   }
 }
