--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -147,10 +147,6 @@
     "message": "Pokračovať",
     "description": "Confirmation button after user chose what to block on the page"
   },
-  "buttonback": {
-    "message": "Späť",
-    "description": "Back to previous page button"
-  },
   "findingads": {
     "message": "Hľadanie reklám...\n\nMôže to chvíľu trvať.",
     "description": "'Block an ad' wizard loading message"
@@ -1309,10 +1305,6 @@
     "message": "Blokovať reklamy len na týchto stránkach:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
   },
-  "format_site1_site2_site3": {
-    "message": "Formát: ~stránka1.sk|~stránka2.sk|~správy.site3.sk",
-    "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
-  },
   "warning_overrules_filters": {
     "message": "Upozornenie: na všetkých ostatných stránkach uvidíte reklamy!\nToto má prednosť pred všetkými ostatnými filtrami pre tieto stránky.",
     "description": "Message on the 'Customize' tab of the options page, explaining the danger of adding a allowlist filter for all websites with only some exceptions."
@@ -2341,10 +2333,6 @@
     "message": "AdBlock teraz aktualizuje vaše zoznamy filtrov, aby zistil, či by to mohol byť problém.",
     "description": "Message for help flow in popup menu."
   },
-  "done_reload_page": {
-    "message": "Hneď ako skončíme, stránku znova načítajte.",
-    "description": "Message for help flow in popup menu."
-  },
   "checked_basics": {
     "message": "Skontrolovali sme základy a aktualizovali vaše zoznamy filtrov.",
     "description": "Message for help flow in popup menu."
@@ -2868,5 +2856,9 @@
   "custom_image_supported_file_types": {
     "message": "*.bmp, *.gif, *.jpeg, *.png, *.svg, *.tiff, *.webp",
     "description": "supported file types, shown on the error message dialog box when a user selects a unsupported file type"
+  },
+  "done_reload_page": {
+    "message": "Hneď ako skončíme, stránku znova načítajte.",
+    "description": "text on panel in the help flow"
   }
 }
