--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -147,10 +147,6 @@
     "message": "Так краще",
     "description": "Confirmation button after user chose what to block on the page"
   },
-  "buttonback": {
-    "message": "Назад",
-    "description": "Back to previous page button"
-  },
   "findingads": {
     "message": "Пошук реклами...\n\nЦе триватиме недовго.",
     "description": "'Block an ad' wizard loading message"
@@ -1309,10 +1305,6 @@
     "message": "Блокувати рекламу лише на цих сайтах:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
   },
-  "format_site1_site2_site3": {
-    "message": "Формат: ~site1.com|~site2.com|~novyny.site3.org",
-    "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
-  },
   "warning_overrules_filters": {
     "message": "Увага: на всіх інших сайтах Ви побачите рекламу!\nБудуть скасовані всі інші фільтри для цих сайтів.",
     "description": "Message on the 'Customize' tab of the options page, explaining the danger of adding a allowlist filter for all websites with only some exceptions."
@@ -2349,10 +2341,6 @@
     "message": "AdBlock оновлює список фільтрів, щоб побачити чи може це бути проблемою.",
     "description": "Message for help flow in popup menu."
   },
-  "done_reload_page": {
-    "message": "Як тільки ми завершили, будь ласка, оновіть сторінку.",
-    "description": "Message for help flow in popup menu."
-  },
   "checked_basics": {
     "message": "Ми перевірили основи та оновили ваші списки фільтрів.",
     "description": "Message for help flow in popup menu."
@@ -2980,5 +2968,9 @@
   "custom_image_supported_file_types": {
     "message": "*.bmp, *.gif, *.jpeg, *.png, *.svg, *.tiff, *.webp",
     "description": "supported file types, shown on the error message dialog box when a user selects a unsupported file type"
+  },
+  "done_reload_page": {
+    "message": "Як тільки ми завершили, будь ласка, оновіть сторінку.",
+    "description": "text on panel in the help flow"
   }
 }
