--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -202,7 +202,7 @@
     "description": "section title on hidding wizard, shown when advance user option enabled"
   },
   "confirm_msg": {
-    "message": "确认此项目的类型和ID正确无误：",
+    "message": "确认此元素的属性正确无误：",
     "description": "text on hidding wizard, shown when advance user option enabled"
   },
   "findingads": {
@@ -461,6 +461,10 @@
   },
   "filterannoyances": {
     "message": "Fanboy's Annoyances（拦截页面中的弹窗、社交网站按钮和相关组件，以及其他干扰内容）",
+    "description": "A filter list"
+  },
+  "filterfb_notifications": {
+    "message": "Fanboy通知（拦截页面中的弹窗、社交网站按钮和相关组件，以及其他干扰内容）",
     "description": "A filter list"
   },
   "filterwarning_removal": {
@@ -1445,8 +1449,8 @@
     "message": "仅在这些网站上拦截广告：",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
   },
-  "format_site1_site2_site3": {
-    "message": "格式：~site1.com|~site2.com|~news.site3.org",
+  "format": {
+    "message": "格式：",
     "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
   },
   "warning_overrules_filters": {
@@ -2030,7 +2034,7 @@
     "description": "DO NOT TRANSLATE The text on the popup menu when an error has occurred"
   },
   "error_msg_help_us_partI": {
-    "message": "Help us resolve this problem  ",
+    "message": "帮助我们解决这个问题 ",
     "description": "DO NOT TRANSLATE"
   },
   "error_msg_help_us_partII": {
@@ -3412,5 +3416,111 @@
   "learn_more_lower": {
     "message": "了解更多",
     "description": "GFC messaging on the popup menu"
+  },
+  "distraction_control": {
+    "message": "分心控制",
+    "description": "Name of a Premium option"
+  },
+  "take_control": {
+    "message": "控制您的浏览器，按照您想要的方式浏览！",
+    "description": "Description of the distraction control option"
+  },
+  "goodbye_distractions": {
+    "message": "借助“分心控制”，告别通讯弹窗、浮动视频和其他恼人的分心内容。",
+    "description": "Description of the distraction control option"
+  },
+  "block_site_notifications": {
+    "message": "拦截网站通知",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "decline_allow_notifications": {
+    "message": "自动拒绝来自您访问的网站的 \"允许通知 \"请求。",
+    "description": "Description of 'block site notifications' on the distraction control options page"
+  },
+  "stop_autoplay_videos": {
+    "message": "停止自动播放视频",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "prevent_videos": {
+    "message": "防止视频自动播放，并在您浏览时阻止 \"浮动 \"视频跟随您。",
+    "description": "Description of 'stop autoplay videos' on the distraction control options page"
+  },
+  "hide_newsletter_popups": {
+    "message": "隐藏通讯弹窗",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "block_newsletter_popups": {
+    "message": "拦截邀请您注册网站电子通讯的恼人弹窗。",
+    "description": "Description of 'hide newsletter pop-ups' on the distraction control options page"
+  },
+  "ignore_survey_requests": {
+    "message": "忽略调查请求",
+    "description": "Sub-header on the distraction control options page"
+  },
+  "dismiss_invitations": {
+    "message": "立即忽略网站发出的调查参与邀请。",
+    "description": "Description of 'ignore survey requests' on the distraction control options page"
+  },
+  "swap_ads_for_images": {
+    "message": "交换广告图像",
+    "description": "Sub-header describing Image Swap on the main Premium options page"
+  },
+  "personalize_experience": {
+    "message": "个性化您的浏览体验，充分利用 AdBlock for $browser$。",
+    "description": "Description of Image Swap on the main Premium options page",
+    "placeholders": {
+      "browser": {
+        "content": "$1",
+        "example": "Chrome"
+      }
+    }
+  },
+  "block_and_replace": {
+    "message": "有了图像交换，我们仍然会拦截广告，但我们会将它们替换为您最喜欢的图片。",
+    "description": "Description of Image Swap on the main Premium options page"
+  },
+  "customize_your_adblock": {
+    "message": "自定义 AdBlock",
+    "description": "Sub-header describing Themes on the main Premium options page"
+  },
+  "fun_way_customize": {
+    "message": "主题是在您的浏览器中自定义 AdBlock 的有趣方式。",
+    "description": "Description of Themes on the main Premium options page"
+  },
+  "take_control_easy": {
+    "message": "通过简单易用的控件来控制 AdBlock 的外观、体验和字体大小。让 AdBlock 为您所用。",
+    "description": "Description of Themes on the main Premium options page"
+  },
+  "save_settings_multiple": {
+    "message": "在多个设备上保存您的 AdBlock 设置",
+    "description": "Sub-header describing Backup & Sync on the main Premium options page"
+  },
+  "take_custom_with_you": {
+    "message": "让您的自定义广告拦截规则、拦截规则列表订阅和白名单通过所有 Chrome 配置文件与您相随。",
+    "description": "Description of Backup & Sync on the main Premium options page"
+  },
+  "set_up_once": {
+    "message": "只需设置一次 AdBlock，就可以随处使用设置！",
+    "description": "Description of Backup & Sync on the main Premium options page"
+  },
+  "annoyance_free_browsing": {
+    "message": "体验无烦扰的浏览",
+    "description": "Description of Distraction Control on the main Premium options page"
+  },
+  "bypass_mode": {
+    "message": "旁路模式",
+    "description": "Header on the main Premium options page"
+  },
+  "see_fewer_walls": {
+    "message": "看到更少的反 AdBlock 墙",
+    "description": "Sub-header describing Bypass Mode on the main Premium options page"
+  },
+  "popups_disable_adblock": {
+    "message": "要求您禁用 AdBlock 的弹窗在网络上越来越常见。",
+    "description": "Description of Bypass Mode on the main Premium options page"
+  },
+  "get_around_popups": {
+    "message": "有了旁路模式，您可以在不禁用 AdBlock 的情况下绕过一些弹窗。",
+    "description": "Description of Bypass Mode on the main Premium options page"
   }
 }
