--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,13 +2,16 @@
 
 UNRELEASED:
 
+Version: 4.35.0, Date: 2021-08-11
+- Fixed an issue with the advanced mode of the hiding wizard
+- Updated the bundled Snippets library
+
 Version: 4.34.0, Date: 2021-06-21
 - Updated translations
 - Fixed an issue with anonymous data collection sending data URLs
 - Fixed an issue with the edit mode of the hiding wizard
 - Removed the functionality to open the /update page
 - Updated to ABP Core 3.11
-
 
 Version: 4.33.0, Date: 2021-04-30
 - Updated Translations
